# Astrology-MCP

immanuel-mcp-server/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start_server.bat  start_server.ps1  start_server_mcp.bat  start_server_mcp.ps1
immanuel-mcp-server/app/: __init__.py  config.py  main.py  mcp_main.py
immanuel-mcp-server/app/models/: astrology.py  mcp.py  requests.py
immanuel-mcp-server/app/routes/: health.py  mcp.py
immanuel-mcp-server/app/services/: chart_service.py  mcp_service.py  validation.py
immanuel-mcp-server/app/utils/: exceptions.py  logging.py
immanuel-mcp-server/docs/: api_reference.md  examples.md  windows_setup.md
immanuel-mcp-server/scripts/: generate_ssl.sh  init_project.sh  setup_windows.bat  test_mcp_mode.bat  verify_windows_install.bat
immanuel-mcp-server/tests/: conftest.py  test_chart_service.py  test_integration.py  test_mcp_protocol.py
